--- a/core/.env
+++ b/core/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=e*vtaedyr-zvj0%ex4xv!$nix90gp3j#2eb_g(*7f21q-jm62-
 
-DATABASE_URL=postgres://postgres:121212@127.0.0.1:5432/ecommerce
+DATABASE_URL=postgres://postgres:12345@127.0.0.1:5432/ecommerce
 
 EMAIL_BACKEND=''
 EMAIL_HOST=''
@@ -12,6 +12,6 @@ EMAIL_USE_TLS=''
 DOMAIN='127.0.0.1:8000'
 
 BT_ENVIRONMENT='sandbox'
-BT_MERCHANT_ID='422xwfd8mz4zgtgr'
-BT_PUBLIC_KEY='q886zwwn2jvmj5fm'
-BT_PRIVATE_KEY='f999805945069776d0898ca0aa5e20a7'
+BT_MERCHANT_ID='wfn3n3h8khv8xh9c'
+BT_PUBLIC_KEY='sc9mqfnbqzn6r3qm'
+BT_PRIVATE_KEY='e4e76dfe6261f51a40519b770970844a'
