Cambio THE_DATABASE_URL

--- a/core/.env
+++ b/core/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=e*vtaedyr-zvj0%ex4xv!$nix90gp3j#2eb_g(*7f21q-jm62-
 
-DATABASE_URL=postgres://ecommerce_db_zvn5_user:LYJyx9NxwMymOZJI1zdQkolwVRmrHxGK@dpg-cl4gkep828mc73csts10-a.ohio-postgres.render.com/ecommerce_db_zvn5
+THE_DATABASE_URL=postgres://ecommerce_db_zvn5_user:LYJyx9NxwMymOZJI1zdQkolwVRmrHxGK@dpg-cl4gkep828mc73csts10-a.ohio-postgres.render.com/ecommerce_db_zvn5
 
 EMAIL_BACKEND=''
 EMAIL_HOST=''
