--- a/core/.env
+++ b/core/.env
@@ -2,12 +2,12 @@ SECRET_KEY=e*vtaedyr-zvj0%ex4xv!$nix90gp3j#2eb_g(*7f21q-jm62-
 
 DATABASE_URL=postgres://ecommerce_db_zvn5_user:LYJyx9NxwMymOZJI1zdQkolwVRmrHxGK@dpg-cl4gkep828mc73csts10-a.ohio-postgres.render.com/ecommerce_db_zvn5
 
-EMAIL_BACKEND=''
-EMAIL_HOST=''
-EMAIL_HOST_USER=''
-EMAIL_HOST_PASSWORD=''
-EMAIL_PORT=''
-EMAIL_USE_TLS=''
+EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_HOST_USER='motospitecommerce@gmail.com'
+EMAIL_HOST_PASSWORD='pbbv njzj hxil hjom'
+EMAIL_PORT='587'
+EMAIL_USE_TLS='True'
 
 DOMAIN='127.0.0.1:8000'
 
