Se actualiza el DOMAIN con build

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SKIP_PREFLIGHT_CHECK=True
 REACT_APP_API_URL='https://ecommerce-primer-deploy-nuevo-repo.onrender.com'
+DOMAIN='https://ecommerce-primer-deploy-nuevo-repo.onrender.com'
