Thanks for usinnuevo build

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SKIP_PREFLIGHT_CHECK=True
-REACT_APP_API_URL='https://ecommerce-primer-deploy-nuevo-repo.onrender.com'
+REACT_APP_API_URL='https://motospitsprint2.onrender.com'
